# graduate-project

./: .env  BLEU.py  Dockerfile  HyperParams.py  NIST.py  README.md  Tokenizer.py  Transformer.py  data_download_and_tokenizer_training.py  data_load.py  load_model.py  main.py  nist_test.py  pretrain.py  pretrain_data_preprocess.py  pyproject.toml  requirements.txt  run.sh  save_model.py  src_vocab.txt  test.py  tgt_vocab.txt  train.sh  train_pretrained.py  ukranian_prepare.py
src/: main.py  test.py
src/core/: settings.py
src/data/: data_loader.py
src/testing/: bleu.py  nist.py
src/tokenizer/: tokenizer.py
src/transformers/: transformers.py  translators.py
src/utils/: utils.py
templates/: translations.htm
test/: test_sentences.txt
