[tool.poetry]
name = "graduate-project"
version = "0.1.0"
description = "This is my graduate work."
authors = ["Nadir Devrishev"]
readme = "README.md"
packages = [{include = "graduate_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
